Add OpenMetadata Ranger plugin skeleton
* Add skeleton of OpenMetadata plugin

* Add shading for ranger-openmetadata-plugin to build Uber JAR with dependencies

* Update servicedef to cover all action types and most resources

* Remove unused files and plugin-shim

* Remove plugin build profile for distribution

* Change case of actions to match OpenMetadata

* Remove unused access type

* Update parent pom version

* Add openmetadata profile to pipeline

* Exclude ranger-util because it requires python3

* Update parent pom version

* Add ranger-util back